[package]
name = "backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["serde"] }
cors = "0.1.0"
dotenvy = "0.15.7"
rumqttc = { version = "0.25.1", features = ["use-rustls"] }
rustls = "0.23.40"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.52.2", features = ["full"] }
webpki-roots = "1.0.7"
